# PipeLib

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README
cmake/: PipelibConfig.cmake.in  PipelibConfigVersion.cmake.in
examples/: CMakeLists.txt
examples/strings/: CMakeLists.txt  PrintStringBlock.cpp  PrintStringBlock.h  RandomStringBlock.cpp  RandomStringBlock.h  TestBlock.cpp  TestBlock.h  strings.cpp
include/: .gitignore  CMakeLists.txt
include/pipelib/: AbsPipeEngine.h  AbstractPipeline.h  AbstractSimpleBarrier.h  Barrier.h  Block.h  BlockConnector.h  BlockHandle.h  BlockIterator.h  BoostThreadEngine.h  DirectPipeline.h  EmptyGlobalData.h  ILink.h  IPipeline.h  LoaningPtr.h  NotifyingPtr.h  Pipe.h  PipeBlock.h  PipeEngine.h  PipeRunner.h  PipelibConfig.h.in  Pipeline.h  PipelineState.h  SerialEngine.h  SimpleBarrier.h  SimpleLink.h  SingleThreadedEngine.h  Sinks.h  StartBlock.h  Types.h  pipelib.h
include/pipelib/detail/: AbsPipeEngine.h  Block.h  BlockConnector.h  BlockIterator.h  BoostThreadEngine.h  LoaningPtr.h  NotifyingPtr.h  Pipe.h  PipeEngine.h  SerialEngine.h  SimpleBarrier.h  SingleThreadedEngine.h
include/pipelib/event/: EventSupport.h  PipeEngineEvents.h  PipeEngineListener.h  PipeEngineStateChanged.h  PipeRunnerEvents.h  PipeRunnerListener.h  PipeRunnerStateChanged.h
include/pipelib/event/detail/: PipeEngineEvents.h  PipeRunnerEvents.h
include/pipelib/managed/: ManagedBlock.h  ManagedPipeline.h
include/pipelib/managed/detail/: BlockOwner.h  BlockOwnerIterator.h  ManagedBlock.h  ManagedPipeline.h
include/src/: Dummy.cpp
pipelib/: AbstractLinkPipeline.h  AbstractPipeline.h  AbstractSimpleBarrier.h  AbstractSimpleBlock.h  AbstractSimpleStartBlock.h  Barrier.h  Block.h  DefaultBarrier.h  DirectPipeline.h  IDataSink.h  IFinishNotifiable.h  ILink.h  IPipeline.h  PipeBlock.h  Pipeline.h  SimpleEndBlock.h  SimpleLink.h  SingleThreadedPipeline.h  StartBlock.h
pipelib/event/: EventSupport.h  IPipeListener.h  PipeStateChanged.h
src/: Dummy.cpp
tests/: BasicTests.cpp  CMakeLists.txt  pipelibtest.cpp  pipelibtest.h
tests/managed/: ManagedPipelineTest.cpp
tests/strings/: .CMakeLists.txt.swp  CMakeLists.txt  PrintStringBlock.cpp  PrintStringBlock.h  RandomStringBlock.cpp  RandomStringBlock.h  strings.cpp
